Fri May 18 00:16:58 2001  George Lebl <jirka@5z.com>

	* config/Makefile.am: don't overwrite gnomerc on install, that's bad
	  juju

	* docs/C/gdm.sgml: update for the XKeepsCrashing stuff

Thu May 17 15:44:08 2001  George Lebl <jirka@5z.com>

	* config/Makefile.am: install factory settings, and for most settings
	  files, overwrite the current and save the current in .orig files.
	  this way changes will propagate.  Don't do this for gdm.conf
	  however, this is the most likely to be modified by the user.

	* gui/Makefile.am, gui/gdmphotosetip.desktop.in, gui/gdmphotosetup.c:
	  a small proggie to setup the face for a user.  Should at some point
	  become a crapplet and include all the gdm user settings

	* gui/gdmconfig.(c|h|glade): fix some segfaults, include a factory
	  settings reverting, and move the exclude users to the face
	  browser as that's where it belongs

Thu May 17 03:38:17 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: fix segfault in the login entry checking code 

Thu May 17 02:52:38 2001  George Lebl <jirka@5z.com>

	* Makefile.am, confgiure.in, debian/Default.debian,
	  config/Makefile.am:  Don't put the debian stuff into the tarball,
	  and remove it from the config, this is here for people wanting to
	  live off the bleeding edge of 2.0-beta4 and run a stable gdm.
	  Hopefully the gdm 2.2.x packages will show up in mainstream debian
	  soon (they don't seem to be there now).  Plus some make distcheck
	  fixes

Thu May 17 01:27:15 2001  George Lebl <jirka@5z.com>

	* config/XKeepsCrashing, config/gdm.conf.in, daemon/gdm.[ch],
	  daemon/server.c, config/Makefile.am, daemon/slave.c: Added a script
	  to run when X keeps crashing, this will run an X configuration
	  tool (after asking for root password of course), only works
	  on systems with /usr/bin/open (linux only I suppose) and XFree86
	  for now.

	* gui/Makefile,am:  fix make dist issues

	* gui/gdmconfig.(c|glade): fix some issues, move debugging into it's