@@ -14,6 +14,7 @@ LogDir=@EXPANDED_AUTHDIR@
 PidFile=/var/run/gdm.pid
 PostSessionScriptDir=@EXPANDED_SYSCONFDIR@/gdm/PostSession/
 PreSessionScriptDir=@EXPANDED_SYSCONFDIR@/gdm/PreSession/
+FailsafeXServer=
 XKeepsCrashing=@EXPANDED_SYSCONFDIR@/gdm/XKeepsCrashing
 XKeepsCrashingConfigurators=/usr/bin/X11/XF86Setup /usr/bin/X11/Xconfigurator
 RebootCommand=/sbin/shutdown -r now
