@@ -177,6 +177,10 @@ gchar *s = N_("Delete Server");
 gchar *s = N_("Failsafe");
 gchar *s = N_("Script to run when X is crashing: ");
 gchar *s = N_("X configurator binaries to try: ");
+gchar *s = N_("A list of X setup programs to try for the above script, separated by spaces");
+gchar *s = N_("A script to run when the X server keeps crashing and the failsafe X server is either empty or also didn't take.  This will run an X setup program defined below.");
+gchar *s = N_("Failsafe X server:");
+gchar *s = N_("An X server binary to run if the standard one keeps crashing.  If this fails the script below will be run.");
 gchar *s = N_("X-server setup");
 gchar *s = N_("Session configuration");
 gchar *s = N_("Session directory: ");
