@@ -3957,7 +3957,7 @@ tr_TR
 	  <class>GtkTable</class>
 	  <name>table51</name>
 	  <border_width>3</border_width>
-	  <rows>2</rows>
+	  <rows>3</rows>
 	  <columns>2</columns>
 	  <homogeneous>False</homogeneous>
 	  <row_spacing>3</row_spacing>
@@ -3976,8 +3976,8 @@ tr_TR
 	    <child>
 	      <left_attach>0</left_attach>
 	      <right_attach>1</right_attach>
-	      <top_attach>0</top_attach>
-	      <bottom_attach>1</bottom_attach>
+	      <top_attach>1</top_attach>
+	      <bottom_attach>2</bottom_attach>
 	      <xpad>0</xpad>
 	      <ypad>0</ypad>
 	      <xexpand>False</xexpand>
@@ -4002,8 +4002,8 @@ tr_TR
 	    <child>
 	      <left_attach>0</left_attach>
 	      <right_attach>1</right_attach>
-	      <top_attach>1</top_attach>
-	      <bottom_attach>2</bottom_attach>
+	      <top_attach>2</top_attach>
+	      <bottom_attach>3</bottom_attach>
 	      <xpad>0</xpad>
 	      <ypad>0</ypad>
 	      <xexpand>False</xexpand>
@@ -4018,6 +4018,37 @@ tr_TR
 	  <widget>
 	    <class>GtkEntry</class>
 	    <name>x_keeps_crashing_configurators</name>
+	    <tooltip>A list of X setup programs to try for the above script, separated by spaces</tooltip>
+	    <can_focus>True</can_focus>
+	    <signal>
+	      <name>changed</name>
+	      <handler>can_apply_now</handler>
+	      <last_modification_time>Tue, 21 Mar 2000 21:36:52 GMT</last_modification_time>
+	    </signal>
+	    <editable>True</editable>
+	    <text_visible>True</text_visible>
+	    <text_max_length>0</text_max_length>
+	    <text></text>
+	    <child>
+	      <left_attach>1</left_attach>
+	      <right_attach>2</right_attach>
+	      <top_attach>2</top_attach>
+	      <bottom_attach>3</bottom_attach>
+	      <xpad>0</xpad>
+	      <ypad>0</ypad>
+	      <xexpand>True</xexpand>
+	      <yexpand>False</yexpand>
+	      <xshrink>False</xshrink>
+	      <yshrink>False</yshrink>
+	      <xfill>True</xfill>
+	      <yfill>False</yfill>
+	    </child>
+	  </widget>
+
+	  <widget>
+	    <class>GtkEntry</class>
+	    <name>x_keeps_crashing</name>
+	    <tooltip>A script to run when the X server keeps crashing and the failsafe X server is either empty or also didn't take.  This will run an X setup program defined below.</tooltip>
 	    <can_focus>True</can_focus>
 	    <signal>
 	      <name>changed</name>
@@ -4045,8 +4076,35 @@ tr_TR
 	  </widget>
 
 	  <widget>
+	    <class>GtkLabel</class>
+	    <name>label255</name>
+	    <label>Failsafe X server:</label>
+	    <justify>GTK_JUSTIFY_LEFT</justify>
+	    <wrap>False</wrap>
+	    <xalign>0</xalign>
+	    <yalign>0.5</yalign>
+	    <xpad>0</xpad>
+	    <ypad>0</ypad>
+	    <child>
+	      <left_attach>0</left_attach>
+	      <right_attach>1</right_attach>
+	      <top_attach>0</top_attach>
+	      <bottom_attach>1</bottom_attach>
+	      <xpad>0</xpad>
+	      <ypad>0</ypad>
+	      <xexpand>False</xexpand>
+	      <yexpand>False</yexpand>
+	      <xshrink>False</xshrink>
+	      <yshrink>False</yshrink>
+	      <xfill>True</xfill>
+	      <yfill>False</yfill>
+	    </child>
+	  </widget>
+
+	  <widget>
 	    <class>GtkEntry</class>
-	    <name>x_keeps_crashing</name>
+	    <name>failsafe_x_server</name>
+	    <tooltip>An X server binary to run if the standard one keeps crashing.  If this fails the script below will be run.</tooltip>
 	    <can_focus>True</can_focus>
 	    <signal>
 	      <name>changed</name>
