@@ -1,3 +1,9 @@
+Fri May 18 04:17:00 2001  George Lebl <jirka@5z.com>
+
+	* daemon/gdm.[ch], daemon/slave.c, docs/C/gdm.sgml,
+	  config/gdm.conf.in, gui/gdmconfig.(c|glade):  Add a config
+	  option for a failsafe X server which is emtpy by default
+
 Fri May 18 00:16:58 2001  George Lebl <jirka@5z.com>
 
 	* config/Makefile.am: don't overwrite gnomerc on install, that's bad
